--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
             <version>1.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1208</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mauriciotogneri</groupId>
+            <artifactId>querylite</artifactId>
+            <version>0.5.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
