--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mauriciotogneri</groupId>
+            <artifactId>javautils</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4.1208</version>
