--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
   - $HOME/.m2
 
 before_script:
-  - psql -c 'create database momowars;' -U postgres
+  - psql -c 'create database momowarstest;' -U postgres
 
 script:
   - mvn clean package test
