--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ cache:
   - $HOME/.m2
 
 before_script:
+  - psql -c 'drop database momowarstest;' -U postgres
   - psql -c 'create database momowarstest;' -U postgres
 
 script:
