--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ jdk:
   - oraclejdk8
 
 env:
-  - VERSION=xxx
+  - PORT=5000
+  - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres&password=password
+  - CONNECTION_POOL_SIZE=3
 
 services:
   - postgresql
