--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ jdk:
   - oraclejdk8
 
 env:
-  - PORT=5000
-  - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres&password=password
-  - CONNECTION_POOL_SIZE=3
+  global:
+    - PORT=5000
+    - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres&password=password
+    - CONNECTION_POOL_SIZE=3
 
 services:
   - postgresql
