--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
 env:
   global:
     - PORT=5000
-    - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres&password=password
+    - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres
     - CONNECTION_POOL_SIZE=3
 
 services:
@@ -19,7 +19,6 @@ cache:
 
 before_script:
   - psql -c "create database momowarstest;" -U postgres
-  - psql -c "create user postgres with password 'password';" -U postgres
 
 script:
   - mvn clean package test
