Added Swagger UI

--- a/config/dev.properties
+++ b/config/dev.properties
@@ -1,5 +1,5 @@
 input    = src/test/java/com/mauriciotogneri/momowars/api
-output   = api.json
+output   = swagger/api.json
 title    = API
 version  = 1.0.0
 protocol = https
