--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,18 @@
             <version>1.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
         <!-- TEST -->
 
         <dependency>
@@ -156,13 +168,6 @@
             <groupId>com.mauriciotogneri</groupId>
             <artifactId>jsonschema</artifactId>
             <version>1.0.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.9.0</version>
             <scope>test</scope>
         </dependency>
 
