--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ jdk:
 
 env:
   global:
-    - ENVIRONMENT=local
     - PORT=5000
     - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres
     - CONNECTION_POOL_SIZE=3
     - GMAIL_USERNAME=xxx
     - GMAIL_PASSWORD=xxx
+    - REQUESTS_PER_MINUTE=1000
 
 services:
   - postgresql
