--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
     - PORT=5000
     - JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/momowarstest?user=postgres
     - CONNECTION_POOL_SIZE=3
-    - GMAIL_USERNAME=xxx
-    - GMAIL_PASSWORD=xxx
+    - GMAIL_USERNAME=
+    - GMAIL_PASSWORD=
     - REQUESTS_PER_MINUTE=1000
 
 services:
